[project]
name = "solpolpy"
version = "0.1.1"
authors = [
    { name="J. Marcus Hughes", email="mhughes@boulder.swri.edu"},
    { name="Matthew J. West", email="mwest@boulder.swri.edu"},
    { name="Ritesh Patel", email="ritesh.patel@swri.org"},
    { name="Bryce M. Walbridge", email="bmw39@calvin.edu" },
]
description = "Solar polarization resolver for any instrument"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sunpy",
    "astropy",
    "numpy",
    "matplotlib",
    "networkx",
    "ndcube"
]

[project.optional-dependencies]
test = [
    'pytest',
    'coverage',
    'pytest-cov'
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['solpolpy']

[tool.ruff]
line-length = 120
ignore-init-module-imports = true

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "solpolpy"
length_sort = false
length_sort_sections = "stdlib"
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
