[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solpolpy"
dynamic = ["version"]
authors = [
    { name="J. Marcus Hughes", email="mhughes@boulder.swri.edu"},
    { name="Matthew J. West", email="mwest@boulder.swri.edu"},
    { name="Ritesh Patel", email="ritesh.patel@swri.org"},
    { name="Bryce M. Walbridge", email="bmw39@calvin.edu" },
    { name="Chris Lowder", email="chris.lowder@swri.org"}
]
description = "Solar polarization resolver for any instrument"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sunpy",
    "astropy",
    "numpy",
    "matplotlib",
    "networkx",
    "ndcube",
    "sunkit_image"
]

[project.optional-dependencies]
test = [
    'pytest',
    'coverage',
    'pytest-cov',
    'ruff'
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "nbsphinx",
    "ipython",
    "pandoc",
    "packaging"
]

dev = ["solpolpy[test, docs]", "pre-commit"]

[tool.setuptools_scm]

[tool.setuptools]
packages = ['solpolpy']

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
#lint.select = ["ALL"]
lint.ignore = ["F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"tests/*.py" = ['S101']

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "solpolpy"
length_sort = false
length_sort_sections = "stdlib"
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
